# winmine-trainer

./: CMakeLists.txt  LICENSE  README.md  TODO  auto_win.cpp  common_globals.h  disable_mines.cpp  freeze_timer.cpp  get_layout.cpp  inject.cpp  inject.h  mines_visible.cpp  trainer.cpp  winmine.idb  writeup.md
